--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.android.volley:volley:1.0.0'
 }
