--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:preference-v7:26.1.0'
     implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.barryzhang:temptyview:0.0.1'
+
 }
